[tool.poetry]
name = "metrics-ton-api"
version = "0.1.0"
description = "simple mvp backend for ton chain, visiting card"
authors = ["Juxan <julyfortune101@gmail.com>"]
readme = "README.md"
packages = [{include = "metrics_ton_api"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
redis = "^4.5.2"
motor = "^3.1.1"
aiohttp = "^3.8.4"
arq = "^0.25.0"
pyrogram = "^2.0.103"
tgcrypto = "^1.2.5"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
uvicorn = "^0.21.1"
pre-commit = "^3.2.0"
pytest = "^7.2.2"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.bandit]
exclude = ['mongo.py','__pycache__','alembic']
exclude_dirs = ['tests','venv']
recursive = true
skips = ['B311']
